<resources>
    <!-- Nombre de la aplicación -->
    <string name="app_name">Ev 1 Programación II</string>

    <!-- Textos para el diseño -->
    <string name="restaurant_title">Restaurante Chileno</string>
    <string name="pastel_choclo">Pastel de Choclo</string>
    <string name="cazuela">Cazuela</string>
    <string name="switch_tip">Incluir propina (10%)</string>
    <string name="total">Total: $0</string>
    <string name="hint_quantity">Cantidad</string>
</resources>
